test/ill-formed/0073_pointer_in_struct_in_struct.c
typedef struct {
  double x, y;
  struct {
  char *s;
  } label;
} labeled_point;

void f (labeled_point p) {}
